tests/valid/assign_global.fl
c :: import "../c.fl";

global: i64 = 321;

main :: proc () {
  global = 123;

  c.printf(c"%ld\n", global);

  nested :: proc () {
    global = 321;
    c.printf(c"%ld\n", global);
  }

  nested();
}


