tests/invalid/duplicate_extern_proc.fl
c :: import "../c.fl";

puts :: proc "c" ();

main :: proc () {
	c.puts(c"Hello");
}
